# tutor-cpp

./: .clang-tidy  .doxyfile-in  .gitignore  CMakeLists.txt  README.md
.cmake/: declare_project_targets.cmake  declare_system_libraries.cmake  get_cpm.cmake  options.cmake
project-bin/: CMakeLists.txt
project-bin/src/: main.cpp
project-lib/: CMakeLists.txt
project-lib/include/: hello_world.hh
project-lib/src/: hello_world.cc
project-lib/tests/: CMakeLists.txt
project-lib/tests/src/: hello_world.cc
